--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,14 @@
-EDM.v12.suo
-*.suo
-*.exe
-*.pdb
-EDM/bin/Debug/*
-EDM/bin/Debug/*
-EDM/obj/Debug/*
-EDM/obj/Debug/*
+
+*.sln
+
+*.v12.suo
+
+*.csproj
+
+EDM/bin/
+
+EDM/obj/
+
+EDM/Properties/
+
+
